Creado mediante Colaboratory

--- a/BIBLIOTECA_recommendation_system_ipynb_txt.ipynb
+++ b/BIBLIOTECA_recommendation_system_ipynb_txt.ipynb
@@ -3,9 +3,19 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "movie_recommendation_system.ipynb.txt",
+      "name": "BIBLIOTECA_recommendation_system_ipynb_txt.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [
+        "ZToySOnYBcTf",
+        "dQf6OdrtBcTr",
+        "1RaIzGGSBcT7",
+        "1oIOodWpBcT8",
+        "VsjTfHlRBcUO",
+        "YYmcLoxlBcUl",
+        "_M9NXaKvBcUm",
+        "LSwhnbrgBcUz"
+      ],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -35,7 +45,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/LeydiHuallpa/BI-BA/blob/master/BIBLIOTECA_recommendation_system_ipynb_txt.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/LeydiHuallpa/SISTEMA_BIBLIOTECA_COLAB/blob/master/BIBLIOTECA_recommendation_system_ipynb_txt.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -59,7 +69,9 @@
         "colab_type": "text"
       },
       "source": [
-        "The rapid growth of data collection has led to a new era of information. Data is being used to create more efficient systems and this is where Recommendation Systems come into play.  Recommendation Systems are a type of **information filtering systems** as they improve the quality of search results and provides items that are more relevant to the search item or are realted to the search history of the user.  \n"
+        "**RESUMEN**\n",
+        "\n",
+        "The rapid growth of data collection has led to a new era of information. Data is being used to create more efficient systems and this is where Recommendation Systems come into play.  Recommendation Systems are a type of \n"
       ]
     },
     {
@@ -70,8 +82,8 @@
         "colab_type": "text"
       },
       "source": [
-        "They are used to predict the **rating** or **preference** that a user would give to an item. Almost every major tech company has applied them in some form or the other: Amazon uses it to suggest products to customers, YouTube uses it to decide which video to play next on autoplay, and Facebook uses it to recommend pages to like and people to follow. \n",
-        "Moreover,  companies like Netflix and Spotify  depend highly on the effectiveness of their recommendation engines for their business and sucees."
+        " **INTRODUCCION**\n",
+        " They are used to predict the"
       ]
     },
     {
@@ -82,7 +94,7 @@
         "colab_type": "text"
       },
       "source": [
-        "![](https://i.kinja-img.com/gawker-media/image/upload/s--e3_2HgIC--/c_scale,f_auto,fl_progressive,q_80,w_800/1259003599478673704.jpg)"
+        "**MARCO TEORICO**"
       ]
     },
     {
@@ -93,7 +105,7 @@
         "colab_type": "text"
       },
       "source": [
-        "In this kernel we'll be building a baseline Movie Recommendation System using [TMDB 5000 Movie Dataset](https://www.kaggle.com/tmdb/tmdb-movie-metadata). For novices like me this kernel will pretty much serve as a foundation in recommendation systems and will provide you with something to start with. "
+        "In this kernel we'll be building a baseline Movie Recommendation System using [TMDB 5000 Movie Dataset](https://www.kaggle.com/tmdb/tmdb-movie-metadata). "
       ]
     },
     {
@@ -104,7 +116,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**So let's go!**"
+        "**EJEMPLO**"
       ]
     },
     {
@@ -115,10 +127,7 @@
         "colab_type": "text"
       },
       "source": [
-        "There are basically three types of recommender systems:-\n",
-        "\n",
-        "> *  **Demographic Filtering**- They offer generalized recommendations to every user, based on movie popularity and/or genre. The System recommends the same movies to users with similar demographic features. Since each user is different , this approach is considered to be too simple. The basic idea behind this system is that movies that are more popular and critically acclaimed will have a higher probability of being liked by the average audience.\n",
-        "\n"
+        "**ANALISIS (Apreciaciones)**\n"
       ]
     },
     {
@@ -129,7 +138,7 @@
         "colab_type": "text"
       },
       "source": [
-        "> *  **Content Based Filtering**- They suggest similar items based on a particular item. This system uses item metadata, such as genre, director, description, actors, etc. for movies, to make these recommendations. The general idea behind these recommender systems is that if a person liked a particular item, he or she will also like an item that is similar to it."
+        "**CONCLUSIONES**"
       ]
     },
     {
@@ -140,7 +149,7 @@
         "colab_type": "text"
       },
       "source": [
-        "> *  **Collaborative Filtering**- This system matches persons with similar interests and provides recommendations based on this matching. Collaborative filters do not require item metadata like its content-based counterparts."
+        "**BIBLIOGRAFIA**"
       ]
     },
     {
